<resources>
    <string name="app_name">RegistrationForm</string>
    <string name="name">Name</string>
    <string name="mobilenumber">MobileNumber</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="submitt">Submitt</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_mobile_no">Enter Your Mobile no.</string>
</resources>
